PROJECT(cec17)

ADD_EXECUTABLE(test "test.cc")
ADD_EXECUTABLE(testrandom "testrandom.cc")
ADD_EXECUTABLE(testsolis "testsolis.cc")
ADD_EXECUTABLE(testtlbo "testTLBO.cc")
ADD_EXECUTABLE(testtlbosw "testTLBOSW.cc")
ADD_EXECUTABLE(testtlboe "testTLBOE.cc")
ADD_EXECUTABLE(testtlbob "testTLBOB.cc")
ADD_EXECUTABLE(testtlboebsw "testTLBOEBSW.cc")

ADD_LIBRARY("cec17_test_func" SHARED "cec17_test_func.c" "cec17.c")

TARGET_LINK_LIBRARIES(test "cec17_test_func")
TARGET_LINK_LIBRARIES(testrandom "cec17_test_func")
TARGET_LINK_LIBRARIES(testsolis "cec17_test_func")
TARGET_LINK_LIBRARIES(testtlbo "cec17_test_func")
TARGET_LINK_LIBRARIES(testtlbosw "cec17_test_func")
TARGET_LINK_LIBRARIES(testtlboe "cec17_test_func")
TARGET_LINK_LIBRARIES(testtlbob "cec17_test_func")
TARGET_LINK_LIBRARIES(testtlboebsw "cec17_test_func")
